--- a/blog.html
+++ b/blog.html
@@ -31,14 +31,14 @@
 <div id="row">
 	<!-- Side bar -->
 	<div id="side">
-	<h3 class="text">Blog Entries</h3>
-	<p class="text">None yet.</p>
+	<h3>Blog Entries</h3>
+	<p >None yet.</p>
 	</div>
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text">David Landry's Blog</h2>
-	<p class="text">First article coming soon!</p>
+	<h2>David Landry's Blog</h2>
+	<p>First article coming soon!</p>
 	</div>
 	
 	<!-- Footer -->
