--- a/interactive/index.html
+++ b/interactive/index.html
@@ -22,13 +22,16 @@
 <h1>Landarian Labs</h1>
 </div>
 
+
 <!-- Navbar -->
 <div id="navbar">
 <a href="../index.html">Home</a><a href="../resume.html">Resume</a><a href="../blog.html">Blog</a><a href="../portfolio/index.html">Portfolio</a><a href="index.html">Interactive Stuff</a><a href="../contact.html">Contact us</a>
 </div>
 
+
 <!-- Main body -->
 <div id="row">
+
 	<!-- Side bar -->
 	<div id="side">
 	<h3 class="subtitle"><a href="permcomb.html">Permutations (<i>nPr</i>) &amp; Combinations(<i>nCr</i>)</a></h3>
@@ -37,8 +40,8 @@
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text">Interactive Web Projects</h2>
-	<p class="text">Welcome to a collection of fun projects, tools, and programming challenges. Please select a project from the menu.</p>
+	<h2 >Interactive Web Projects</h2>
+	<p >Welcome to a collection of fun projects, tools, and programming challenges. Please select a project from the menu.</p>
 	</div>
 	
 	<!-- Footer -->
