--- a/interactive/permcomb.html
+++ b/interactive/permcomb.html
@@ -38,17 +38,17 @@
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text">Permutations (<i>nPr</i>) and Combinations (<i>nCr</i>)</h2>
-	<p class="text">Permutations are the number of possible orders of r objects from a pool of n. Combinations are the number of possible combinations of r objects from a pool of n where order does not matter.<br>
+	<h2 >Permutations (<i>nPr</i>) and Combinations (<i>nCr</i>)</h2>
+	<p >Permutations are the number of possible orders of r objects from a pool of n. Combinations are the number of possible combinations of r objects from a pool of n where order does not matter.<br />
 	<form style="margin-left:10px" name="calcPC">
-	<label for="pc_n">Enter the total number of objects (n).</label><br>
-	<input type="number" id="pc_n" name="pc_n" min="1" autofocus><br><br>
-	<label for="pc_r">Enter the number of objects you want to find permutations or combinations of out of n total (r).</label><br>
-	<input type="number" id="pc_r" name="pc_r" min="1"><br><br>
+	<label for="pc_n">Enter the total number of objects (n).</label><br />
+	<input type="number" id="pc_n" name="pc_n" min="1" autofocus><br /><br />
+	<label for="pc_r">Enter the number of objects you want to find permutations or combinations of out of n total (r).</label><br />
+	<input type="number" id="pc_r" name="pc_r" min="1"><br /><br />
 	<button type="button" onclick=permutation()>Find permutations (nPr)</button>
 	<button type="button" onclick=combination()>Find combinations (nCr)</button>
 	<button type="button" onclick=pcReset()>Reset</button>
-	<button type="button" onclick=showCode()>Show Code</button><br><br>
+	<button type="button" onclick=showCode()>Show Code</button><br /><br />
 	<span id="pcAnswer"></span>
 	</form>
 	</p>
