--- a/template.html
+++ b/template.html
@@ -32,15 +32,15 @@
 <div id="row">
 	<!-- Side bar -->
 	<div id="side">
-	<h3 class="text"><!--Sidebar title--></h3>
-	<p class="text"><!--Sidebar content--></p>
+	<h3 ><!--Sidebar title--></h3>
+	<p ><!--Sidebar content--></p>
 	</div>
 	
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text"><!--Page Title--></h2>
-	<p class="text"><!--Page content--></p>
+	<h2 ><!--Page Title--></h2>
+	<p ><!--Page content--></p>
 	</div>
 	
 	
