--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,19 @@
 <div id="row">
 	<!-- Side bar -->
 	<div id="side">
-	<h3 class="text">David Landry's Sidebar</h3>
-	<p class="text">Nothing to see here yet.</p>
+	<h3>David Landry's Sidebar</h3>
+	<p>Nothing to see here yet.</p>
 	</div>
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text">David Landry's Links</h2>
-	<p class="text">Links to all kinds of places will feature here.</p>
+	<h2>Contact Landarian Labs</h2>
+	<form>
+	<label for="firstName">First name:</label><br/>
+	<input name="firstName" id="firstName" type="text"><br/><br/>
+	<label for="lastName">Last name:</label><br/>
+	<input name="lastName" id="lastName" type="text"><br/><br/>
+	</form>
 	</div>
 	
 	<!-- Footer -->
