--- a/landarian.html
+++ b/landarian.html
@@ -33,58 +33,58 @@
 <div id="row">
 	<!-- Side bar -->
 	<div id="side">
-	<h3 class="text"><a href="landarian.html">Landarian Labs</a></h3>
-	<p class="text">More information about the history and purpose of Landarian Labs.</p>
+	<h3><a href="landarian.html">Landarian Labs</a></h3>
+	<p>More information about the history and purpose of Landarian Labs.</p>
     <hr>
-	<h3 class="text"><a href="bio.html">David Landry's Bio</a></h3>
-	<p class="text">Learn some facts about the life of David Landry.</p>
+	<h3><a href="bio.html">David Landry's Bio</a></h3>
+	<p>Learn some facts about the life of David Landry.</p>
     <hr>
-	<h3 class="text"><a href="zebra.html">Why zebras?</a></h3>
-	<p class="text">Why are there so many zebras?</p>
+	<h3><a href="zebra.html">Why zebras?</a></h3>
+	<p>Why are there so many zebras?</p>
 	</div>
 	
 	
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text">About Landarian Labs</h2>
-	<h3 class="text">The Beginning: Dragonclub Games</h3>
-	<p class="text">
+	<h2>About Landarian Labs</h2>
+	<h3>The Beginning: Dragonclub Games</h3>
+	<p>
 	Landarian Labs was founded in 1996 as Dragonclub Games. It consisted of a group of students who loved role-playing games, especially Dungeons & Dragons. 
 	We would write our own pencil & paper RPGs and share game campaigns with each other. Eventually, we decided we wanted to have a web presence for our group. 
 	So, David and his friends started learning how to make a webpage, and before long, they had their own Geocities page! Sadly, all archives of the games created 
 	by the group as well as the website are lost to the ages.
-	</p><h3 class="text">Dungeon World</h3>
-	<p class="text">
+	</p><h3>Dungeon World</h3>
+	<p>
 	The centerpiece of Dragonclub Games was an epic RPG called Dungeon World. Dungeon World was set in the ficticious world of Elemon, where an ancient 
 	evil called the Geddians were seeking to enslave the human race. And so, the players would team up to embark on a journey to unite the elemental forces 
 	into powerful weapons that could defeat the Geddians.
-	<br>
+	<br />
 	Dungeon World started as a series of pencil & paper role-playing games. It later expanded into other games. Clayton's Castle was a board game, where 
 	a party of heroes would go through the board to collect treasures and defeat foes. Each playthrough was like one floor of the castle, and each floor 
 	featured new opponents and new treasures to collect. Opponents of Doom was a tournament-style player-vs-player role-playing fighting game featuring 
 	some of the cast of Dungeon World. It quickly became an after-school sensation, with nearly a dozen students coming together every few days for a shot 
 	at glory in the Opponents of Doom tournament.
-    </p><h3 class="text">Landryland Labs</h3>
-	<p class="text">
+    </p><h3>Landryland Labs</h3>
+	<p>
 	David's love of gaming would continue after high school. However, he began discovering the joys of computer programming as well. And so, he began 
 	adapting some of his old Dungeon World games to computer programs. He created a text-based final boss encounter in QBASIC and later experimented with 
 	character creators in Visual Basic. He would go on to publish many of these works on a new website called Landryland Labs. However, his passions
 	soon changed direction.
-	</p><h3 class="text">An Engineer's Inspiration</h3>
-	<p class="text">
+	</p><h3>An Engineer's Inspiration</h3>
+	<p>
 	Not long after all this, David begain going back to college to complete a degree in computer science. At this time, he was very close with a friend 
 	named vic, who he regarded like a father after his own father had passed away. Vic was working on programs that controlled hardware, a concept that 
 	seemed intriguing to David. After learning more about Vic's work, David became more and more interested in embedded systems. He was fascinated that 
 	he could write software programs that directly controlled hardware devices. David changed his major to computer engineering so that he could spend 
 	more time understanding the electronics behind embedded systems. Finally, David graduated from the University of Washington, Bothell with a bachelor 
 	of science in computer engineering. He now seeks to apply his classroom and lab experience to design new systems, both in hardware and software realms.
-	</p><h3 class="text">Landarian Labs</h3>
-	<p class="text">
+	</p><h3>Landarian Labs</h3>
+	<p>
 	David spent the months after graduation perfecting his resume and applying to whatever embedded software engineering role he could find. In the 
 	mean time, he continued working on projects on the side. Landarian Labs is the product of this.
-	</p><h3 class="text">Full Circle</h3>
-	<p class="text">
+	</p><h3>Full Circle</h3>
+	<p>
 	Dragonclub Games was formed to spark creativity, discovery, and collaboration through game creation. In the same spirit of that old high school 
 	club, Landarian Labs seeks to promote lifelong learning and creative outlets for those with a passion to create and make. Would you like to be a part of 
 	this newly revived organization? Do you value independent learning? Do you like creating new things? Then join Landarian Labs today!
