--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,14 +32,14 @@
 <div id="row">
 	<!-- Side bar -->
 	<div id="side">
-	<h3 class="text">David Landry's Sidebar</h3>
-	<p class="text">Links to each project will go here.</p>
+	<h3 >David Landry's Sidebar</h3>
+	<p >Links to each project will go here.</p>
 	</div>
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text">David Landry's Portfolio</h2>
-	<p class="text">This will cover my projects.</p>
+	<h2 >David Landry's Portfolio</h2>
+	<p >This will cover my projects.</p>
 	</div>
 	
 	<!-- Footer -->
