--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	For now, it is a place that showcases the work and life of Landryland Labs' founder David Landry. 
 	But, we here at Landryland Labs have a passion for lifelong learning and for collaborating with others with a passion for technology and for using it to solve difficult real-world problems.
 	So, be sure to visit regularly and look for new opportunities to collaborate, learn, and teach.
+	<br><br>
+	Blah blah blah
 	</p>
 	</div>
 	
